--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,3 +43,163 @@
         }
     }
 }
+
+// login page css
+@media screen and (max-width:600px){
+    .login-section {
+        width: 100% !important;
+    }
+}
+.login-section {
+    width: 450px;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0px 0px 15px #0000001f;
+    .logo-box-login{
+        text-align: center;
+        img{
+            width: 120px;
+        }
+        h3{
+            font-size: 26px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+    }
+    .forgot-p {
+        a {
+            span {
+                color: #1bb934;
+                margin-left: 5px;
+                font-weight: 600;
+            }
+        }
+    }
+}
+.custom-btn-theme {
+    padding: 12px 10px;
+    border-radius: 30px;
+    font-size: 16px;
+}
+.custom-btn-theme.bg-blue-f {
+    background: #4267b2;
+    border-color:#4267b2 ;
+}
+.custom-btn-theme.bg-default {
+    background: #fff !important;
+    color: #000 !important;
+    border-color: #000 !important;
+}
+.or-login{
+    position: relative;
+    text-align: center;
+    span:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        height: 2px;
+        width: 46%;
+        background: #cacaca;
+        margin: auto;
+    }
+    span:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        height: 2px;
+        width: 46%;
+        background: #cacaca;
+        margin: auto;
+    }
+}
+.google-icon-l {
+    width: 20px;
+    float: left;
+    margin: 3px 0px 0pc 10px;
+}
+.login-section input, .login-section select {
+    min-height: 48px;
+}
+.contact-details-e {
+    justify-content: space-between;
+}
+
+.courses-img{
+    img{
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+    }
+}
+.courses-content{
+    .title {
+        font-size: 18px;
+        font-weight: 600;
+        color: #000;
+    }
+    .details-cap {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: calc(100% - 0%);
+        display: inline-block;
+    }
+    .c-rating-text {
+        color: #b4690e;
+        font-size: 16px;
+        font-weight: 600;
+        margin-right: 5px;
+    }
+    .c-rating-icon {
+        color: #e59819;
+        margin-right: 5px;
+    }
+    .courses-price{
+        .courses-current-price {
+            color: #1c1d1f;
+            font-size: 18px;
+            font-weight: 600;
+            padding: 5px 0px;
+            margin-right: 10px;
+        }
+        s{
+            .courses-original-price {
+                font-size: 18px;
+                font-weight: 400;
+            }
+        }
+    }
+    
+}
+.doc-figure {
+    border: 1px solid #dee2e6;
+    img {
+        width: 100%;
+    }
+}
+.account-card-list{
+    .bg-gray {
+        background: #f8f8f9;
+        padding: 10px;
+        align-items: center;
+        border-radius: 7px;
+    }
+}
+@media screen and (max-width:991px) {
+    .navbar-light .navbar-brand img {
+        width: 50px;
+    }
+}
+.availability-day{
+    height: 30px;
+    width: 30px;
+    padding: 3px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
